major changes to manuscript
@DominiqueMakowski

please check the latest changes (lot has been done till end of result section on study 1)

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -686,6 +686,41 @@
   publisher={Wiley Online Library}
 }
 
+@article{ludecke2021performance,
+  title={performance: An R package for assessment, comparison and testing of statistical models},
+  author={L{\"u}decke, Daniel and Ben-Shachar, Mattan S and Patil, Indrajeet and Waggoner, Philip and Makowski, Dominique},
+  journal={Journal of open source software},
+  volume={6},
+  number={60},
+  year={2021}
+}
+
+@article{merritt2022experimental,
+  title={An experimental study of dimension reduction methods on machine learning algorithms with applications to psychometrics},
+  author={Merritt, Sean H and Christensen, Alexander P},
+  journal={arXiv preprint arXiv:2210.13230},
+  year={2022}
+}
+
+@article{cosemans2022exploratory,
+  title={Exploratory graph analysis for factor retention: Simulation results for continuous and binary data},
+  author={Cosemans, Tim and Rosseel, Yves and Gelper, Sarah},
+  journal={Educational and Psychological Measurement},
+  volume={82},
+  number={5},
+  pages={880--910},
+  year={2022},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{jimenez2023dimensionality,
+  title={Dimensionality assessment in bifactor structures with multiple general factors: A network psychometrics approach.},
+  author={Jim{\'e}nez, Marcos and Abad, Francisco J and Garcia-Garzon, Eduardo and Golino, Hudson and Christensen, Alexander P and Garrido, Luis Eduardo},
+  journal={Psychological methods},
+  year={2023},
+  publisher={American Psychological Association}
+}
+
 @article{koike2023,
   title={Development and Validation of Japanese Versions of the Interoceptive Accuracy Scale and Interoceptive Attention Scale},
   author={Koike, Hikaru and Nomura, Michio},
