--- a/analysis/figures/table1.tex
+++ b/analysis/figures/table1.tex
@@ -22,9 +22,9 @@ Lin et al., (2023) &  &  &  &  &  &  &  & osf.io/3eztd \\
 VonMohr et al., (2023) &  & English & 21843 &  & 56.5 ± 14.4 & 18-93 & 73.2\% & osf.io/7p9u5 \\ 
 Makowski et al., (2023a) &  & English & 485 & Analog scales & 30.1 ± 10.1 & 18-73 & 50.3\% & github.com/RealityBending/IllusionGameReliability \\ 
 Makowski et al., (2023b) &  & English & 836 & Analog scales & 25.1 ± 11.3 & 17-76 & 53.0\% & github.com/DominiqueMakowski/PHQ4R \\ 
-Makowski et al., (2023c) &  & English & 104 & Analog scales & 21.6 ± 5.0 & 18-50 & 76\% & github.com/RealityBending/InteroceptionPrimals \\ 
-Poreiro et al., (2024) &  & English & 107 &  & 26.8 ± 9.2 & 18-57 & 74.8\% & osf.io/49wbv \\ 
-Poreiro et al., unpublished &  & English & 131 &  & 30.9 ± 12.0 & 18-60 & 75.9\% &  \\ 
+Makowski et al., (2023c) &  & English & 146 & Analog scales & 21.1 ± 4.3 & 18-50 & 76\% & github.com/RealityBending/InteroceptionPrimals \\ 
+Poerio et al., (2024) &  & English & 107 &  & 26.8 ± 9.2 & 18-57 & 74.8\% & osf.io/49wbv \\ 
+Poerio et al., unpublished &  & English & 131 &  & 30.9 ± 12.0 & 18-60 & 75.9\% &  \\ 
 Total &  &  & 32214 &  & 48.6 ± 13.1 & 17-93 & 71.6\% &  \\ 
 \bottomrule
 \end{tabular*}
